examples/k8s/elk_rke2/es_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es
  namespace: elk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es.rke2.sikademo.com
      secretName: es.rke2.sikademo.com-tls
  rules:
    - host: es.rke2.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-es-http
                port:
                  number: 9200
